# commandoss-hkt-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.org  docker-build.sh  docker-compose.yml  quick_test.md  rustfmt.toml  setup_ngrok_local.sh  test_all_routes.sh  test_api.py  test_auth.sh  test_auth_api.py  test_auth_curl.sh  test_auth_summary.py  test_github.sh  test_zkpersona.sh  zkpersona_auth.postman_collection.json
crates/core/jd_core/: Cargo.toml
crates/core/jd_core/src/: error.rs  lib.rs
crates/core/jd_core/src/base/: bmc_macros.rs  error.rs  handlers.rs  mod.rs
crates/core/jd_core/src/base/rest/: macros_utils.rs  mod.rs
crates/core/jd_core/src/base/rpc/: handlers.rs  macros_utils.rs  mod.rs  prelude.rs  rpc_params.rs  rpc_result.rs  utils.rs
crates/core/jd_core/src/ctx/: error.rs  mod.rs
crates/core/jd_core/src/sui/: mod.rs  sui_client.rs
crates/gateways/api_gateway/: Cargo.toml
crates/gateways/api_gateway/src/: error.rs  lib.rs  routes_rpc.rs
crates/gateways/api_gateway/src/ai_analysis/: analysis_routes.rs  mod.rs
crates/gateways/api_gateway/src/analytics/: analytics_routes.rs  mod.rs
crates/gateways/api_gateway/src/developers/: developer_routes.rs  mod.rs
crates/gateways/api_gateway/src/github/: github_routes.rs  mod.rs
crates/gateways/api_gateway/src/log/: mod.rs
crates/gateways/api_gateway/src/middleware/: mod.rs  mw_auth.rs  mw_request_context.rs  mw_res_map.rs  mw_res_timestamp.rs  mw_user_auth.rs  pagination.rs
crates/gateways/api_gateway/src/patches/: mod.rs  patch_routes.rs
crates/gateways/api_gateway/src/sui/: mod.rs  sponsor_routes.rs
crates/gateways/api_gateway/src/vulnerabilities/: mod.rs  vulnerability_routes.rs
crates/gateways/api_gateway/src/zkpersona/: auth_endpoints.rs  mod.rs  unified_endpoints.rs
crates/gateways/web_server/: Cargo.toml
crates/gateways/web_server/src/: error.rs  main.rs
crates/infrastructure/jd_storage/: Cargo.toml
crates/infrastructure/jd_storage/src/: config.rs  lib.rs  utils.rs
crates/infrastructure/jd_storage/src/dbx/: error.rs  mod.rs
crates/infrastructure/jd_storage/src/repository/: behavior_input_repository.rs  developer_repositories.rs  mod.rs  traits.rs
crates/infrastructure/jd_tracing/: Cargo.toml
crates/infrastructure/jd_tracing/src/: lib.rs
crates/services/ai_analysis_service/: Cargo.toml  README.md
crates/services/ai_analysis_service/examples/: repository_analysis_integration.rs  test_real_repository.rs
crates/services/ai_analysis_service/src/: error.rs  lib.rs
crates/services/ai_analysis_service/src/application/handlers/: analysis_handler.rs  mod.rs
crates/services/ai_analysis_service/src/application/use_cases/: analysis_use_cases.rs  mod.rs
crates/services/ai_analysis_service/src/domain/: analysis_engine.rs  analysis_models.rs  analysis_repository_trait.rs  llm_provider_trait.rs  mod.rs  vulnerability_patterns.rs
crates/services/ai_analysis_service/src/infrastructure/: analysis_repository_impl.rs  analysis_repository_impl_complex.rs  analysis_repository_impl_old.rs  github_integration.rs  llm_client.rs  mod.rs  static_analyzer.rs
crates/services/ai_analysis_service/src/models/: requests.rs  responses.rs
crates/services/auth_service/: Cargo.toml  README.md
crates/services/auth_service/src/: error.rs  lib.rs
crates/services/auth_service/src/application/: mod.rs
crates/services/auth_service/src/application/handlers/: auth_handler.rs  mod.rs
crates/services/auth_service/src/application/use_cases/: generate_nonce.rs  mod.rs  refresh_token.rs  unified_auth.rs  validate_token.rs  verify_signature.rs
crates/services/auth_service/src/domain/: auth_provider.rs  auth_user.rs  jwt.rs  mod.rs  nonce.rs  nonce_repository_trait.rs  signature_verifier_trait.rs  user_repository_trait.rs  user_role.rs
crates/services/auth_service/src/models/: requests.rs  responses.rs
crates/services/behavior_service/: Cargo.toml
crates/services/behavior_service/src/: error.rs  lib.rs
crates/services/behavior_service/src/application/: mod.rs
crates/services/behavior_service/src/domain/: behavior_repository_trait.rs  mod.rs
crates/services/behavior_service/src/infrastructure/: behavior_repository_impl.rs  mod.rs
crates/services/behavior_service/src/models/: mod.rs  requests.rs  responses.rs
crates/services/developer_service/: Cargo.toml
crates/services/developer_service/src/: error.rs  lib.rs
crates/services/developer_service/src/domain/: developer_models.rs  developer_repository_trait.rs  mod.rs
crates/services/developer_service/src/infrastructure/: developer_repository_impl.rs  developer_repository_impl_old.rs  mod.rs
crates/services/developer_service/src/models/: requests.rs  responses.rs
crates/services/github_service/: Cargo.toml  README.md
crates/services/github_service/src/: error.rs  lib.rs
crates/services/github_service/src/application/: mod.rs
crates/services/github_service/src/domain/: analysis_queue.rs  github_api_models.rs  mod.rs  rate_limiter.rs  webhook_models.rs
crates/services/github_service/src/infrastructure/: analysis_queue_impl.rs  github_client.rs  mod.rs  rate_limiter_impl.rs
crates/services/github_service/src/models/: requests.rs  responses.rs
crates/services/sui_service/: Cargo.toml
crates/services/sui_service/src/: error.rs  lib.rs
crates/services/sui_service/src/application/: mod.rs
crates/services/sui_service/src/domain/: mod.rs  sui_repository_trait.rs
crates/services/sui_service/src/infrastructure/: enhanced_sui_repository.rs  gas_station.rs  mod.rs  sui_repository_impl.rs
crates/services/sui_service/src/models/: mod.rs  requests.rs
crates/shared/jd_domain/: Cargo.toml
crates/shared/jd_domain/src/: error.rs  lib.rs  utils.rs
crates/shared/jd_domain/src/zkpersona_domain/: developer_models.rs  mod.rs  model_controllers.rs  models.rs  profile.rs  user.rs
crates/shared/jd_utils/: Cargo.toml
crates/shared/jd_utils/src/: config.rs  enum_utils.rs  error.rs  lib.rs  regex.rs  time.rs
crates/shared/jd_utils/src/macros/: impl_from.rs  mod.rs
docs/: API_DOCUMENTATION.md  (+6 more)
(+124 files in other folders)
