[package]
name = "jd_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Core Utilities
derive_more.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
uuid = { workspace = true, features = ["serde"] }

# -- Database
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
modql.workspace = true

# -- Web & Async
axum.workspace = true
async-trait.workspace = true

# -- Caching
redis.workspace = true

# -- Logging
tracing.workspace = true

# -- Validation
validator.workspace = true

# -- Time
chrono.workspace = true

# -- Macros
strum_macros.workspace = true
paste.workspace = true

# -- Blockchain
sui-sdk.workspace = true

# -- RPC
rpc-router.workspace = true

# -- Internal Dependencies
jd_utils = { path = "../../shared/jd_utils" }
jd_storage = { path = "../../infrastructure/jd_storage" }
