[package]
name = "api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Web Framework & HTTP
axum.workspace = true
tower-cookies.workspace = true
hyper.workspace = true
reqwest.workspace = true

# -- Serialization
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true

# -- Database & Query
modql.workspace = true
sea-query.workspace = true

# -- RPC
rpc-router.workspace = true
rpc-router-macros = "0.1.0"
paste.workspace = true

# -- Async & Utilities
tokio.workspace = true
async-trait.workspace = true

# -- Time & Date
time.workspace = true
chrono.workspace = true

# -- Database
sqlx.workspace = true

# -- Utilities
derive_more.workspace = true
uuid = { workspace = true, features = ["serde"] }
strum.workspace = true
strum_macros.workspace = true
rand.workspace = true
base64.workspace = true
rust_decimal.workspace = true

# -- Error Handling
thiserror.workspace = true

# -- Caching
redis.workspace = true

# -- Logging
tracing.workspace = true

# -- Blockchain
sui-sdk.workspace = true

# -- Internal Dependencies - Libraries
jd_core = { path = "../../core/jd_core" }
jd_utils = { path = "../../shared/jd_utils" }
jd_domain = { path = "../../shared/jd_domain" }
jd_storage = { path = "../../infrastructure/jd_storage" }

# -- Internal Dependencies - Services
behavior_service = { path = "../../services/behavior_service" }
scoring_service = { path = "../../services/scoring_service" }
zkproof_service = { path = "../../services/zkproof_service" }
sui_service = { path = "../../services/sui_service" }
auth_service = { path = "../../services/auth_service" }
github_service = { path = "../../services/github_service" }
developer_service = { path = "../../services/developer_service" }
