[package]
name = "jd_storage"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Database
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true

# -- Time
chrono.workspace = true

# -- Async & Utilities
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true

# -- Serialization
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

# -- Utilities
derive_more.workspace = true

# -- Error Handling
thiserror.workspace = true

# -- Logging
tracing.workspace = true

# -- Internal Dependencies
jd_utils = { path = "../../shared/jd_utils" }
jd_domain = { path = "../../shared/jd_domain" }
