[package]
name = "behavior_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Web Framework & HTTP
axum.workspace = true

# -- Serialization
serde.workspace = true
serde_json.workspace = true

# -- Database
sqlx.workspace = true
modql.workspace = true
sea-query.workspace = true

# -- Async & Utilities
tokio.workspace = true
async-trait.workspace = true

# -- Time & Date
time.workspace = true

# -- Utilities
derive_more.workspace = true
uuid = { workspace = true, features = ["serde"] }
validator.workspace = true

# -- Error Handling
thiserror.workspace = true

# -- Logging
tracing.workspace = true

# -- Internal Dependencies
jd_core = { path = "../../core/jd_core" }
jd_domain = { path = "../../shared/jd_domain" }
jd_utils = { path = "../../shared/jd_utils" }