[package]
name = "developer_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
jd_core = { path = "../../core/jd_core" }
jd_domain = { path = "../../shared/jd_domain" }
jd_utils = { path = "../../shared/jd_utils" }
jd_storage = { path = "../../infrastructure/jd_storage" }

# External dependencies
axum = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
modql = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
rust_decimal = { workspace = true, features = ["serde-float"] }
rust_decimal_macros = { workspace = true }

[lib]
name = "developer_service"
path = "src/lib.rs"