[package]
name = "jd_domain"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Serialization
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true

# -- Database
modql.workspace = true
sea-query.workspace = true
sqlx.workspace = true

# -- Utilities
derive_more.workspace = true
uuid = { workspace = true, features = ["serde"] }
validator.workspace = true

# -- Time
time.workspace = true
chrono.workspace = true

# -- Decimal arithmetic for precision
rust_decimal.workspace = true

# -- Error handling
thiserror.workspace = true

# -- Internal Dependencies
jd_utils = { path = "../jd_utils" }
